add insights endpoint
